--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="header-links">
                     <a href="#" onclick="openMotiveModal()" class="about-us-link">Motive</a>
                     <a href="#" onclick="openAboutUsModal()" class="about-us-link">About Us</a>
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSe_NmafyhPvfDwSQboOnuHkC9CLWKXQd40VLNkkF-NNCj9tYQ/viewform?usp=header" 
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSe_NmafyhPvfDwSQboOnuHkC9CLWKXQd40VLNkkF-NNCj9tYQ/viewform?pli=1&authuser=0" 
                        target="_blank" 
                        class="about-us-link">Add Your Projects</a>
                 </div>
@@ -203,3 +203,4 @@
 </body>
 
 </html>
+
